# cmeow

./: .gitignore  README.md  pyproject.toml  ruff.toml
src/cmeow/: __main__.py
src/cmeow/cmd/: __init__.py  _cmd.py  _resolve_fail.py
src/cmeow/command/: __init__.py  _command.py  _parser.py  _resolve_fail.py
src/cmeow/util/: __init__.py  _console_io.py  _defaults.py  _enum.py  _errors.py  _key_validation.py  _key_validators.py  _keys.py  _misc.py  _parser.py  _typing.py  _typing_ext.py  _util.py
src/cmeow/util/_arg_parser/: __init__.py  _parser.py  _types.py
test/: .cmeow-project  CMakeLists.txt
