[project]
name = "cmeow"
version = "0.1.0"
description = "Small CLI tool to simplify working with CMake projects."
readme = "README.md"
license = "MIT"
authors = [
    { name = "darragh0" }
]
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "semver>=3.0.4",
    "toml>=0.10.2",
]
keywords = ["CLI", "CMake", "tool", "automation", "build"]
urls = { "Repository" = "https://github.com/darragh0/cmeow" }

[project.scripts]
cmeow = "cmeow.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["test/a", "test/hi"]

